--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .container{
    
     padding: .625rem;
-
 }
+
 p,h2{
     display: flex;
     text-align:start;
@@ -12,3 +16,15 @@ p,h2{
 .navbar {
     margin-bottom: 1rem;
 }
+
+.card {
+    margin-bottom: 1.5rem;
+}
+
+footer {
+    padding: 1rem;
+    background-color: #f8f9fa;
+    text-align: center;
+    width: 100%;
+}
+
